EdgeStorage EdgeStorageTests GraphComponent PathFinderManager RoadArchitectClient RoadGraphDebugScreen --- - Обновление EdgeStorage, чтобы содержал информацию (нода 1, нода 2, статус) - Обновление тестов для EdgeStorage - Обновление GraphComponent / RoadGraphDebugScreen, под новую структуру EdgeStorage - Доработка параметров и структуры PathFinder - Обновление PathFinderManager, под новую структуру EdgeStorage - Обновление RoadArchitectClient, под новую структуру EdgeStorage - Обновление RoadArchitectConfigModel